# CosmoCoreAI

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  schema.sql
src/: main.rs
